# advent2021

./: Cargo.toml
src/: grid.rs  read.rs
